# Muxloom

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: regression.yml  release.yml
src/: app.rs  bridge.rs  config.rs  daemon.rs  daemon_protocol.rs  debug.rs  lib.rs  main.rs  media.rs  model.rs  recap.rs  runtime.rs  ssh_config.rs  terminal_session.rs  ui.rs  worker.rs
tests/: daemon_handover.rs  runtime_remote.rs  runtime_tmux.rs
