[package]
name = "muxloom"
version = "0.4.1"
edition = "2024"
rust-version = "1.85"
description = "A terminal loom for persistent Codex and Claude Code sessions across machines"
license = "GPL-3.0-only"
repository = "https://github.com/MarsTechHAN/Muxloom"
readme = "README.md"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
csv = "1.4"
image = { version = "=0.25.5", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "pnm", "qoi", "tiff", "webp"] }
libc = "0.2"
lz4_flex = "0.11"
portable-pty = "0.8"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shell-words = "1.1"
signal-hook = "0.3"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
toml = "0.8"
unicode-width = "0.2"
vt100 = "0.15"
